dark mode fix

--- a/Innovate/Css/Darkstyle.css
+++ b/Innovate/Css/Darkstyle.css
@@ -124,4 +124,10 @@ body
 #list
 {
     list-style-type: none;
+    padding-left: 20px;
+}
+
+li
+{
+    color: black;
 }
